<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_update_cloth">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/cloth_type"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="fitCenter"
            />
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:text="@string/last_washed"/>
            <TextView
                android:id="@+id/cloth_last_washed"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <TextView
            android:id="@+id/cloth_use_count"
            android:layout_weight="0.25"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_wear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_wear"
            android:onClick="wear"
            android:text="@string/action_wear" />
        <Button
            android:id="@+id/button_wash"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_laundry"
            android:onClick="wash"
            android:text="@string/action_wash" />
        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_delete"
            android:onClick="delete"
            android:text="@string/action_delete" />
    </LinearLayout>

    <ImageView
        android:id="@+id/cloth_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:background="@color/colorLightGray"
        android:contentDescription="@string/cloth_picture"/>
</LinearLayout>
 